--- a/pepeizqs deals web/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,8 +1,18 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String11");
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+<div class="texto-info">@ViewData["Title"]</div>
+
+<div class="perfil" style="margin-top: 20px;">
+    <partial name="_StatusMessage" model="Model.mensaje" />
+
+@*     var statusMessageClass = Model.StartsWith("Error") ? "danger" : "success";
+    <div class="alert alert-@statusMessageClass alert-dismissible" role="alert">
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        @Model.mensaje
+    </div> *@
+</div>
+
