--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -10,27 +10,27 @@
 
 <partial name="_StatusMessage" for="StatusMessage" />
 
-<div class="row perfil-espacio-adicional">
+<div class="row">
     <form id="email-form" method="post">
         <div asp-validation-summary="All" class="text-danger" role="alert"></div>
 
         @if (Model.IsEmailConfirmed)
         {
-            <div class="input-group" style="margin-bottom: 10px;">
+            <div class="input-group" style="margin-bottom: 25px;">
                 <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String3")</label>
                 <input asp-for="Email" class="entrada-texto" disabled />            
             </div>
         }
         else
         {
-            <div style="margin-bottom: 10px;">
+            <div style="margin-bottom: 25px;">
                 <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String3")</label>
                 <input asp-for="Email" class="entrada-texto" placeholder="@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String4")" disabled />
                 <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String5")</button>
             </div>
         }
 
-        <div style="margin-bottom: 10px;">
+        <div style="margin-bottom: 20px;">
             <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String6")</label>
             <input asp-for="Input.NewEmail" class="entrada-texto" autocomplete="email" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String4")" />
             <span asp-validation-for="Input.NewEmail" class="texto-peligro-entrada"></span>
