--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -8,13 +8,15 @@
 
 <div class="texto-info">@ViewData["Title"]</div>
 
-<partial name="_StatusMessage" for="StatusMessage" />
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.Correo>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
 
-<div class="row">
+@* <partial name="_StatusMessage" for="StatusMessage" /> *@
+
+@* <div class="row">
     <form id="email-form" method="post">
         <div asp-validation-summary="All" class="text-danger" role="alert"></div>
 
-        @if (Model.IsEmailConfirmed)
+        @if (Model.IsEmailConfirmed == true)
         {
             <div class="input-group" style="margin-bottom: 25px;">
                 <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String3")</label>
@@ -28,6 +30,14 @@
                 <input asp-for="Email" class="entrada-texto" placeholder="@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String4")" disabled />
                 <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String5")</button>
             </div>
+
+            @if (Model.confirmacionEnviado == true)
+            {
+                <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    @Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String8")
+                </div>
+            }          
         }
 
         <div style="margin-bottom: 20px;">
@@ -43,7 +53,7 @@
         </div>
        
     </form>
-</div>
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
