--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,14 +1,26 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String17");
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
     Layout = "~/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml";
 }
 
 <div class="texto-info">@ViewData["Title"]</div>
 
-<partial name="_StatusMessage" for="StatusMessage"/>
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.Contraseña>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+
+
+
+
+
+
+
+
+
+
+
+@* <partial name="_StatusMessage" for="StatusMessage"/>
 
 <div class="row perfil-espacio-adicional">
     <form id="change-password-form" method="post">
@@ -38,7 +50,7 @@
             </div>
         </div>
     </form>
-</div>
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
