--- a/pepeizqs deals web/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ConfirmEmailModel
+@model ConfirmEmailChangeModel
 @{
     ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String14");
 }
@@ -7,7 +7,7 @@
 <div class="texto-info">@ViewData["Title"]</div>
 
 <div class="perfil" style="margin-top: 20px;">
-    @if (Model.resultado.Succeeded == true)
+    @if (Model.completado == true)
     {
         @Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String15")
     }
