--- a/pepeizqs deals web/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,10 +1,13 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String33");
 }
 
-<h1>@ViewData["Title"]</h1>
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.ContraseñaOlvidada>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+
+
+@* <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
 <div class="row">
@@ -19,7 +22,7 @@
             <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
         </form>
     </div>
-</div>
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
