--- a/pepeizqs deals web/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "ResetPassword.String1");
 }
 
-<h1>@ViewData["Title"]</h1>
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.ContraseñaResetear>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+
+@* <h1>@ViewData["Title"]</h1>
 <h2>Reset your password.</h2>
 <hr />
 <div class="row">
@@ -30,7 +32,7 @@
             <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
         </form>
     </div>
-</div>
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
